Poetry/poetrypage.css
body{
	margin: 0;
}

#Full {
	width: 100%;
	max-height: 100%;
	background-color: white;
}

#Topsection {
  display: flex;
  flex-direction: row;
  align-items: center;         /* Vertically center items */
  justify-content: space-between; /* Push items to edges */
  padding: 0 20px;             /* Optional: space on sides */
  background: white;           /* Optional: match your design */
}


#Section0 {
	position: relative;
	background-color: white;
}

#Headersection {
	background-color: white;
	width: 100%;
	height: 250px;
	background-image: url("poetrypageheader.png");
	background-repeat: no-repeat;
	background-size: cover;
	background-position: 50% 50%;
	margin-top: 20px;
  margin-bottom: 40px;
    	padding: 40px 0 40px;
}

#writername {
  margin-right: 0;   /* Let flex handle spacing */
  color: #e6c222;
  font-family: "Didot";
  display: flex;
  align-items: center;
  justify-content: flex-end;
}

.dropbtn {
    background-color: gold;
    color: white;
    padding: 16px;
    font-size: 16px;
    Margin-left: 0px; 
    border: none;
    cursor: pointer;
    font-family: 'Merriweather';
}

.dropbtn:hover, .dropbtn:focus {
    background-color: rgb(73, 131, 73);
    Color: black;
}
  	
#ContentSection{
  position: relative;
  margin: 60px;

}

#Section1 {
	background-color: white;
	font-size: 20px;
  margin: 60px;
  padding-left: 60px;
  padding-right: 60px;
}


p {
   text-indent: 50px;
}

#copyright {
	background-color: white;
	flex: 1;
	text-align: center;
}

.p0 { text-indent: 2em; }
.p1 { text-indent: 4em; }
.p2 { text-indent: 15px;}
.p3 { text-indent: 160px;}
.p4 { text-indent: 1em; }
.p5 {text-indent: 300px;}

table, th, td {
  border:2px solid grey;
  vertical-align: center;
  margin-top: 40px;
}

table {
  border-collapse: collapse;
  border: 1px solid;
}

th {
  text-align: center;
  vertical-align: center;
  background-color: rgb(184, 149, 90);
  
}

tr:hover {background-color: #d8e8c5;}


td {
  text-align: left;
  padding: 15px;
}

img {
  width: 70px; 
  height: 70px;
}

.left-title-cell{
  border-right: none;
  text-align: left;
  padding-left: 80px;
}

.right-title-cell{
  border-left: none;
}

